SotA: Give newly made liches the additional move point when appropriate

--- a/data/campaigns/Secrets_of_the_Ancients/utils/sota-utils.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/utils/sota-utils.cfg
@@ -889,6 +889,22 @@
             [/then]
         [/if]
 
+        # Liches have one more movement point than necromancers. We will give that point
+        # to them as long as they have not attacked yet and were not just recruited on
+        # this turn. Checking attacks_left takes both possibilities into account.
+        [if]
+            [variable]
+                name=new_lich.attacks_left
+                not_equals=0
+            [/variable]
+            [then]
+                [set_variable]
+                    name=new_lich.moves
+                    add=1
+                [/set_variable]
+            [/then]
+        [/if]
+
         # The leaders are changed in a scripted event at the end of a scenario, so
         # they need to be handled differently than normal units:
         [if]
