SotA S10: Improve and simplify animation for finding bird bones

--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/10_Merfolk_Revenge.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/10_Merfolk_Revenge.cfg
@@ -203,41 +203,22 @@
         [/if]
 
         # Remove the bones and show a resurrected bird:
-        [if]
-            [have_unit]
-                id=Ras-Tabahn
-                x,y=32,12
-            [/have_unit]
-            [then]
-                # Since Ras-Tabahn is standing on the bones, face him toward the most likely hex for the bird to appear
-                [animate_unit]
-                    # Fire the recruitment animation (actually an extra_anim):
-                    [filter]
-                        id=Ras-Tabahn
-                    [/filter]
-                    flag=recruit2
-                    [facing]
-                        x,y=31,12
-                    [/facing]
-                [/animate_unit]
-            [/then]
-            [else]
-                [animate_unit]
-                    # Fire the recruitment animation (actually an extra_anim):
-                    [filter]
-                        id=Ras-Tabahn
-                    [/filter]
-                    flag=recruit2
-                    [facing]
-                        x,y=32,12
-                    [/facing]
-                [/animate_unit]
-            [/else]
-        [/if]
         [remove_item]
             # Remove the bones:
             x,y=32,12
         [/remove_item]
+        [animate_unit]
+            # Fire the recruitment animation (actually an extra_anim):
+            [filter]
+                id=Ras-Tabahn
+            [/filter]
+            flag=recruit2
+            [facing]
+                # The x is 31, not 32, because R-T might be standing on the bones
+                # himself, and he should face the location the bird will appear.
+                x,y=31,12
+            [/facing]
+        [/animate_unit]
         [unit]
             # Show the bird fading in. The engine will automatically find an empty
             # location for it.
