SotA: Type change to follow convention of prefix for a few units
The rest are to follow

--- a/data/campaigns/Secrets_of_the_Ancients/units/Ruffian.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/units/Ruffian.cfg
@@ -1,7 +1,7 @@
 #textdomain wesnoth-units
 # Same as normal, except it can advance to Dark Adept SotA, too
 [unit_type]
-    id=Ruffian SotA
+    id=SotA Ruffian
     [base_unit]
         id=Ruffian
     [/base_unit]
