--- a/data/campaigns/Secrets_of_the_Ancients/units/Skele_Sacrifice.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/units/Skele_Sacrifice.cfg
@@ -1,7 +1,7 @@
 #textdomain wesnoth-units
 # This unit is only used to animate the "sacrificing" of Ras-Tabahn on the altar.
 [unit_type]
-    id=Skeleton SotA
+    id=SotA Skeleton
     [base_unit]
         id=Skeleton
     [/base_unit]
