--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/17_Mortality.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/17_Mortality.cfg
@@ -305,7 +305,7 @@ Not far inside the cave was a ruined castle built in a style I did not recognize
         [/message]
 
         [unit]
-            type=Skeleton SotA
+            type=SotA Skeleton
             side=1
             placement=map_overwrite
             x,y=8,4
