SotA: Type change to follow convention for the bat line
Second type change commit.

--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/01_Slipping_Away.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/01_Slipping_Away.cfg
@@ -128,7 +128,7 @@ With further observation, I have determined that this is probably not the way to
     # *************************** MACROS ***************************
 #define PLACE_BAT X Y TRAIT1
     [unit]
-        type=Vampire Bat SotA
+        type=SotA Vampire Bat
         x={X}
         y={Y}
         side=1
