--- a/data/campaigns/Secrets_of_the_Ancients/units/Bat_Blood.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/units/Bat_Blood.cfg
@@ -1,10 +1,10 @@
 #textdomain wesnoth-units
 [unit_type]
-    id=Blood Bat SotA
+    id=SotA Blood Bat
     [base_unit]
         id=Blood Bat
     [/base_unit]
-    advances_to=Dread Bat SotA
+    advances_to=SotA Dread Bat
     hide_help=yes
     do_not_list=yes
     [standing_anim]
