--- a/data/campaigns/Secrets_of_the_Ancients/units/Bat_Dread.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/units/Bat_Dread.cfg
@@ -1,6 +1,6 @@
 #textdomain wesnoth-units
 [unit_type]
-    id=Dread Bat SotA
+    id=SotA Dread Bat
     [base_unit]
         id=Dread Bat
     [/base_unit]
