--- a/data/campaigns/Secrets_of_the_Ancients/units/Bat_Vampire.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/units/Bat_Vampire.cfg
@@ -1,10 +1,10 @@
 #textdomain wesnoth-units
 [unit_type]
-    id=Vampire Bat SotA
+    id=SotA Vampire Bat
     [base_unit]
         id=Vampire Bat
     [/base_unit]
-    advances_to=Blood Bat SotA
+    advances_to=SotA Blood Bat
     hide_help=yes
     do_not_list=yes
     [standing_anim]
