--- a/data/campaigns/Secrets_of_the_Ancients/utils/sota-utils.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/utils/sota-utils.cfg
@@ -26,7 +26,7 @@
 
 #define SIDE_1_ARDONNA_EARLY
     {SIDE_1_ARDONNA_BASE}
-    recruit=Vampire Bat SotA
+    recruit=SotA Vampire Bat
 #enddef
 
 #define SIDE_1_RAS-TABAHN
@@ -1053,7 +1053,7 @@
         # First, we'll make sure newly recruited ones will be correct
         [disallow_recruit]
             side=1
-            type=Vampire Bat SotA
+            type=SotA Vampire Bat
         [/disallow_recruit]
         [allow_recruit]
             side=1
@@ -1063,12 +1063,12 @@
         # Now the type of all bats on the recall list is changed
         [lua]
             code = <<
-                for i, u in ipairs(wesnoth.get_recall_units { type = 'Vampire Bat SotA, Blood Bat SotA, Dread Bat SotA' }) do
-                    if u.type == 'Vampire Bat SotA' then
+                for i, u in ipairs(wesnoth.get_recall_units { type = 'SotA Vampire Bat, SotA Blood Bat, SotA Dread Bat' }) do
+                    if u.type == 'SotA Vampire Bat' then
                         u:transform('Vampire Bat')
-                    elseif u.type == 'Blood Bat SotA' then
+                    elseif u.type == 'SotA Blood Bat' then
                         u:transform('Blood Bat')
-                    elseif u.type == 'Dread Bat SotA' then
+                    elseif u.type == 'SotA Dread Bat' then
                         u:transform('Dread Bat')
                     end
                 end
