DiD S3: word choice

--- a/data/campaigns/Descent_Into_Darkness/scenarios/03_A_Haunting_in_Winter.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/03_A_Haunting_in_Winter.cfg
@@ -511,7 +511,7 @@
 
         [message]
             speaker=Darken Volk
-            message= _ "Good, good. Now head upward. I sense another young ogre there."
+            message= _ "Good, good. Now head north. I sense another young ogre there."
         [/message]
 
         {OBJECTIVE_EXPLORE}
