SotA: Type change to follow convention for the Dark Adept line
Also changes handling of conditions that allow them to level into liches.

--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/09_Training_Session.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/09_Training_Session.cfg
@@ -102,7 +102,7 @@
     [unit]
         x={X}
         y={Y}
-        type=Dark Adept SotA
+        type=SotA Dark Adept
         side=1
         moves=0
         gender={GENDER}  # Otherwise, they're all male, and there's no reason for that.
@@ -296,7 +296,7 @@
                     [allow_recruit]
                         side=1
                         # This type of Dark Adept cannot advance to a lich.
-                        type=Dark Adept SotA
+                        type=SotA Dark Adept
                     [/allow_recruit]
                     # Gold was removed at the beginning, and is returned now.
                     [gold]
