--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/13_Together_Again.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/13_Together_Again.cfg
@@ -180,7 +180,7 @@ I never would have been able to escape the trees without ghosts. They had proven
         # maybe Chocobones too:
         [allow_recruit]
             side=1
-            type=Dark Adept SotA
+            type=SotA Dark Adept
         [/allow_recruit]
         [if]
             [variable]
