--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/18_Abandoned_Outpost.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/18_Abandoned_Outpost.cfg
@@ -106,7 +106,7 @@ Now the process is complete for both of us. I posted a guard so nothing could ha
                     x=$x1
                     y=$y1
                     side=1
-                    type=Necromancer, Necromancer SotA
+                    type=Necromancer, SotA Necromancer
                 [/have_unit]
             [/show_if]
             [command]
@@ -135,32 +135,6 @@ Now the process is complete for both of us. I posted a guard so nothing could ha
                 [/if]
             [/command]
         [/set_menu_item]
-
-        # From now on, newly recruited DAs need to be able to eventually advance to
-        # liches like normal. We will stop using the custom units in the recruit list.
-        [disallow_recruit]
-            side=1
-            type=Dark Adept SotA
-        [/disallow_recruit]
-        [allow_recruit]
-            side=1
-            type=Dark Adept
-        [/allow_recruit]
-
-        # This section changes all *existing* units so that they have liches in their
-        # advancement trees. As of 1.14 at least, [modify_unit] doesn't apply to
-        # the recall list, same for [transform_unit].
-        [lua]
-            code = <<
-                for i, u in ipairs(wesnoth.get_recall_units { type = 'Dark Adept SotA, Dark Sorcerer SotA' }) do
-                    if u.type == 'Dark Adept SotA' then
-                        u:transform('Dark Adept')
-                    elseif u.type == 'Dark Sorcerer SotA' then
-                        u:transform('Dark Sorcerer')
-                    end
-                end
-            >>
-        [/lua]
 
 #ifndef HARD
         [terrain]
@@ -545,6 +519,7 @@ Now the process is complete for both of us. I posted a guard so nothing could ha
         [/endlevel]
     [/event]
 
+    {ALLOW_LICHES}
     {TURN_INTO_A_LICH}
     {HERO_DEATHS}
     {MANAGE_PROFILE}
