--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/19_Lava_and_Stone.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/19_Lava_and_Stone.cfg
@@ -155,6 +155,7 @@ We continued down the tunnel in utter darkness for a time. The darkness presente
         [/endlevel]
     [/event]
 
+    {ALLOW_LICHES}
     {TURN_INTO_A_LICH}
     {HERO_DEATHS}
     {MANAGE_PROFILE}
