--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/20_North_Knalga.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/20_North_Knalga.cfg
@@ -813,6 +813,7 @@ We left the fires of the mountain behind and plunged once more into darkness. Af
         [/endlevel]
     [/event]
 
+    {ALLOW_LICHES}
     {TURN_INTO_A_LICH}
     {HERO_DEATHS}
     {MANAGE_PROFILE}
