--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/21_Against_the_World.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/21_Against_the_World.cfg
@@ -417,7 +417,7 @@ We finally made it out of the mountains. We crossed the Ford of Abez late this m
             [if]
                 [have_unit]
                     id=$close_units[$i].id
-                    type=Ancient Lich, Ancient Lich SotA
+                    type=Ancient Lich, SotA Ancient Lich
                 [/have_unit]
                 [then]
                     # Using "5" as the index chooses a level-4 unit:
@@ -872,6 +872,7 @@ We finally made it out of the mountains. We crossed the Ford of Abez late this m
         [/message]
     [/event]
 
+    {ALLOW_LICHES}
     {TURN_INTO_A_LICH}
     {HERO_DEATHS}
     {MANAGE_PROFILE}
