--- a/data/campaigns/Secrets_of_the_Ancients/units/Delinquent.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/units/Delinquent.cfg
@@ -12,7 +12,7 @@
     experience=18
     level=0
     alignment=chaotic
-    advances_to=Footpad,Dark Adept SotA
+    advances_to=Footpad,SotA Dark Adept
     cost=8
     usage=fighter
     description= _ "Some girls shun the typical life planned for them by society, and fall in with the criminal element. Though they may end up in jail, that seems preferable to them than tying themselves to a husband."
