--- a/data/campaigns/Secrets_of_the_Ancients/units/Necro_Ancient_Lich.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/units/Necro_Ancient_Lich.cfg
@@ -1,6 +1,6 @@
 #textdomain wesnoth-sota
 [unit_type]
-    id=Ancient Lich SotA
+    id=SotA Ancient Lich
     #textdomain wesnoth-units
     name= _ "Ancient Lich"
     #textdomain wesnoth-sota
