--- a/data/campaigns/Secrets_of_the_Ancients/units/Necro_Dark_Adept.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/units/Necro_Dark_Adept.cfg
@@ -1,11 +1,11 @@
 #textdomain wesnoth-units
-# Same as normal, except advances to Dark Sorcerer SotA
+# Same as normal, except advances to SotA Dark Sorcerer
 [unit_type]
-    id=Dark Adept SotA
+    id=SotA Dark Adept
     [base_unit]
         id=Dark Adept
     [/base_unit]
-    advances_to=Dark Sorcerer SotA
+    advances_to=SotA Dark Sorcerer
     hide_help=yes
     do_not_list=yes
 [/unit_type]
