--- a/data/campaigns/Secrets_of_the_Ancients/units/Necro_Dark_Sorcerer.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/units/Necro_Dark_Sorcerer.cfg
@@ -1,11 +1,11 @@
 #textdomain wesnoth-units
 [unit_type]
-    id=Dark Sorcerer SotA
+    id=SotA Dark Sorcerer
     [base_unit]
         id=Dark Sorcerer
     [/base_unit]
     # The unit cannot advance to a lich until the main character learns how.
-    advances_to=Necromancer SotA
+    advances_to=SotA Necromancer
     hide_help=yes
     do_not_list=yes
     [extra_anim]
