--- a/data/campaigns/Secrets_of_the_Ancients/units/Necro_Lich.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/units/Necro_Lich.cfg
@@ -1,10 +1,10 @@
 #textdomain wesnoth-units
 [unit_type]
-    id=Lich SotA
+    id=SotA Lich
     [base_unit]
         id=Lich
     [/base_unit]
-    advances_to=Ancient Lich SotA
+    advances_to=SotA Ancient Lich
     experience=250
     hide_help=yes
     do_not_list=yes
