--- a/data/campaigns/Secrets_of_the_Ancients/units/Necromancer.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/units/Necromancer.cfg
@@ -1,6 +1,6 @@
 #textdomain wesnoth-units
 [unit_type]
-    id=Necromancer SotA
+    id=SotA Necromancer
     [base_unit]
         id=Necromancer
     [/base_unit]
