--- a/data/campaigns/Secrets_of_the_Ancients/units/Ruffian.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/units/Ruffian.cfg
@@ -1,11 +1,11 @@
 #textdomain wesnoth-units
-# Same as normal, except it can advance to Dark Adept SotA, too
+# Same as normal, except it can advance to SotA Dark Adept, too
 [unit_type]
     id=SotA Ruffian
     [base_unit]
         id=Ruffian
     [/base_unit]
-    advances_to=Footpad,Thug,Dark Adept SotA
+    advances_to=Footpad,Thug,SotA Dark Adept
     hide_help=yes
     do_not_list=yes
 [/unit_type]
