--- a/data/campaigns/Secrets_of_the_Ancients/utils/sota-utils.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/utils/sota-utils.cfg
@@ -6,7 +6,7 @@
     team_name=good
     user_team_name= _ "Ardonna"
     # This type of Dark Adept cannot eventually advance to a lich.
-    type=Dark Adept SotA
+    type=SotA Dark Adept
     id=Ardonna
     profile=portraits/ardonna.png
     gender=female
@@ -35,7 +35,7 @@
     team_name=good
     user_team_name= _ "Ras-Tabahn"
     # This type of Dark Sorcerer cannot advance to a lich.
-    type=Dark Sorcerer SotA
+    type=SotA Dark Sorcerer
     id=Ras-Tabahn
     name= _ "Ras-Tabahn"
     canrecruit=yes
@@ -53,7 +53,7 @@
     team_name=good
     user_team_name= _ "Ardryn-Na"
     # This type of Dark Adept cannot eventually advance to a lich.
-    type=Dark Adept SotA
+    type=SotA Dark Adept
     id=Ardonna
     profile=portraits/ardonna.png
     gender=female
@@ -243,7 +243,7 @@
         name=die
         [filter]
             id=Shynal
-            type=Lich SotA, Ancient Lich SotA, Lich, Ancient Lich
+            type=SotA Lich, SotA Ancient Lich, Lich, Ancient Lich
         [/filter]
         [if]
             [have_unit]
@@ -331,14 +331,14 @@
         [switch]
             variable=Ardonna_stored.type
             [case]
-                value=Necromancer SotA
+                value=SotA Necromancer
                 [set_variable]
                     name=Ardonna_stored.profile
                     value="portraits/humans/necromancer+female.png"
                 [/set_variable]
             [/case]
             [case]
-                value=Lich SotA, Ancient Lich SotA
+                value=SotA Lich, SotA Ancient Lich
                 [set_variable]
                     name=Ardonna_stored.profile
                     value="portraits/ardonna-lich.png"
@@ -399,14 +399,14 @@
                 [switch]
                     variable=Shynal_stored.type
                     [case]
-                        value=Dark Adept SotA, Dark Adept, Dark Sorcerer SotA, Dark Sorcerer
+                        value=SotA Dark Adept, Dark Adept, SotA Dark Sorcerer, Dark Sorcerer
                         [set_variable]
                             name=Shynal_stored.profile
                             value="portraits/shynal-adept.png"
                         [/set_variable]
                     [/case]
                     [case]
-                        value=Necromancer SotA, Necromancer
+                        value=SotA Necromancer, Necromancer
                         [set_variable]
                             name=Shynal_stored.profile
                             value="portraits/humans/necromancer+female.png"
@@ -446,7 +446,7 @@
         [if]
             # The dialog is different if one of the kids is already a Dark something.
             [have_unit]
-                type=Dark Adept SotA, Dark Sorcerer SotA, Necromancer SotA, Dark Adept, Dark Sorcerer, Necromancer
+                type=SotA Dark Adept, SotA Dark Sorcerer, SotA Necromancer, Dark Adept, Dark Sorcerer, Necromancer
                 [and]
                     id=Shynal
                     [or]
@@ -481,7 +481,7 @@
                     [option]
                         message= _ "I have reconsidered. Perhaps you will be very powerful one day."
                         [command]
-                            {ADVANCE_UNIT (id=$unit.id) (Dark Adept SotA)}
+                            {ADVANCE_UNIT (id=$unit.id) (SotA Dark Adept)}
                             [modify_unit]
                                 [filter]
                                     id=$unit.id
@@ -522,7 +522,7 @@
                             [option]
                                 message= _ "Very well. Having more adepts might be a good idea after all."
                                 [command]
-                                    {ADVANCE_UNIT (id=$unit.id) (Dark Adept SotA)}
+                                    {ADVANCE_UNIT (id=$unit.id) (SotA Dark Adept)}
                                     [modify_unit]
                                         [filter]
                                             id=$unit.id
@@ -829,7 +829,7 @@
             [then]
                 [set_variable]
                     name=lich_type
-                    value=Lich SotA
+                    value=SotA Lich
                 [/set_variable]
             [/then]
             [else]
@@ -1074,5 +1074,31 @@
                 end
             >>
         [/lua]
+    [/event]
+#enddef
+
+# After Ardonna learns how to turn into a Lich, that option becomes available to all Dark
+# Sorcerers. This event will be added to scenarios after that point.
+#define ALLOW_LICHES
+    [event]
+        name=unit_placed, post_advance
+        first_time_only=no
+        [filter]
+            type=SotA Dark Sorcerer
+        [/filter]
+        [object]
+            duration=forever
+            silent=yes
+            [effect]
+                [filter]
+                    level=2
+                [/filter]
+                apply_to=new_advancement
+                # It's pretty easy for a unit to end up with multiple Liches in the
+                # level-up options unless we use replace=yes.
+                replace=yes
+                types=SotA Necromancer, Lich
+            [/effect]
+        [/object]
     [/event]
 #enddef
