--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/07_Meeting_of_the_Minds.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/07_Meeting_of_the_Minds.cfg
@@ -34,7 +34,7 @@ The tunnel at the back of the cave narrowed and ran on for quite some time. Patc
         controller=ai
         team_name=good
         user_team_name= _ "Ras-Tabahn"
-        type=Dark Sorcerer SotA
+        type=SotA Dark Sorcerer
         name= _ "Ras-Tabahn"
         id=Ras-Tabahn
         canrecruit=yes
