SotA: Add ability to recruit a variety of walking corpse types

--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/01_Slipping_Away.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/01_Slipping_Away.cfg
@@ -109,6 +109,7 @@ With further observation, I have determined that this is probably not the way to
 
     {DEFAULT_MUSIC_PLAYLIST}
     {TURNS 20 20 20}
+    {ZOMBIE_INIT}
 
     [side]
         # wmllint: who SIDE_1_ARDONNA is Ardonna
@@ -200,8 +201,7 @@ With further observation, I have determined that this is probably not the way to
         {PLACE_BAT 6 24 RESILIENT}
         [unit]
             x,y=6,23
-            type=Walking Corpse
-            variation=bat
+            type=SotA Flying Corpse_Bat
             side=1
         [/unit]
 
@@ -307,6 +307,15 @@ With further observation, I have determined that this is probably not the way to
         [/event]
     [/event]
 
+    [event]
+        name=select
+        [message]
+            speaker=narrator
+            image="units/undead/corpses-full.png~XBRZ(2)"
+            message= _ "<span color='cyan'>Special Note: </span>In this campaign, if a unit is killed and not immediately raised as a corpse, its corpse type will be permanantly added to the recruit list instead."
+        [/message]
+    [/event]
+
     # *************************** OPENING / ENDING ***************************
     [event]
         name=start
@@ -357,6 +366,7 @@ With further observation, I have determined that this is probably not the way to
 
     {HERO_DEATHS}
     {MANAGE_PROFILE}
+    {ZOMBIES}
 
 #undef PLACE_WOLF
 #undef PLACE_BAT
