--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/02_Dark_Business.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/02_Dark_Business.cfg
@@ -320,7 +320,7 @@ of Healing"
             name=graves,stone_number
         [/clear_variable]
 
-        {SET_MENU_ITEM_FOR (Walking Corpse) walking_corpse 8}
+        {SET_MENU_ITEM_FOR (SotA Walking Corpse_Human) walking_corpse 8}
     [/event]
 
     # *************************** PLAY ***************************
@@ -703,11 +703,6 @@ of Healing"
                     id=raise_skeleton_archer, raise_skeleton, raise_walking_corpse, summon_bat
                 [/clear_menu_item]
 
-                [allow_recruit]
-                    type=Walking Corpse
-                    side=1
-                [/allow_recruit]
-
                 [endlevel]
                     result=victory
                     bonus=yes
@@ -816,12 +811,20 @@ Well, I might as well do my experiment and worry about leaving later."
             side=1
             x,y=23,8
             id=first_zombie
-            type=Walking Corpse
+            type=SotA Walking Corpse_Human
             animate=yes
             moves=0
             attacks_left=0
             facing=nw
         [/unit]
+
+        [fire_event]
+            name=add_SotA Walking Corpse_Human
+            [primary_unit]
+                # It doesn't matter *which* human.
+                race=human
+            [/primary_unit]
+        [/fire_event]
 
         [message]
             speaker=Ardonna
@@ -925,6 +928,7 @@ Well, I might as well do my experiment and worry about leaving later."
         [/message]
     [/event]
     {HERO_DEATHS}
+    {ZOMBIES}
     {MANAGE_PROFILE}
 
 #undef PLACE_GUARD
