--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/03_Bandits.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/03_Bandits.cfg
@@ -270,6 +270,7 @@ Even with the delay at the graveyard, I reached the outskirts of Llorvin at firs
     [/event]
 
     {HERO_DEATHS}
+    {ZOMBIES}
     {MANAGE_PROFILE}
 
 #undef THEY_ARE_UNDEAD
