--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/04_Becalmed.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/04_Becalmed.cfg
@@ -648,6 +648,7 @@ The journey started well enough, but on the dawn following our departure, the wi
     [/event]
 
     {HERO_DEATHS}
+    {ZOMBIES}
     {MANAGE_PROFILE}
 
 #undef PLACE_SAILOR
