--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/05_Blackwater.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/05_Blackwater.cfg
@@ -431,6 +431,7 @@ When the captain retained his memories, I reasoned that it may have been because
     [/event]
 
     {HERO_DEATHS}
+    {ZOMBIES}
     {MANAGE_PROFILE}
 
 #undef SHOW_SAILS_MENU_ITEM
