--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/06_Following_the_Shadow.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/06_Following_the_Shadow.cfg
@@ -606,6 +606,7 @@ I was so sure I had the answer! I was wrong. I wanted to believe that I was imag
     [/event]
 
     {HERO_DEATHS}
+    {ZOMBIES}
     {MANAGE_PROFILE}
 
 #undef MOVE_AND_PLACE_BAT
