--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/11_Battleground.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/11_Battleground.cfg
@@ -114,6 +114,12 @@ Rastaban seems like an acceptable ally. He is quite different from the stodgy te
             [/gold_carryover]
         [/objectives]
 
+        {SAVE_ZOMBIE_LIST rastabahn_zombies}
+        {LOAD_ZOMBIE_LIST ardonna_zombies}
+        [clear_variable]
+            name=ardonna_zombies
+        [/clear_variable]
+
         {RECALL_LOYAL_UNITS}
     [/event]
 
@@ -259,5 +265,6 @@ Rastaban seems like an acceptable ally. He is quite different from the stodgy te
     [/event]
 
     {HERO_DEATHS}
+    {ZOMBIES}
     {MANAGE_PROFILE}
 [/scenario]
