--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/12_Walking_Trees.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/12_Walking_Trees.cfg
@@ -391,6 +391,7 @@ My primary objective was met, and I had been able to press a number of ghosts in
     [/event]
 
     {HERO_DEATHS}
+    {ZOMBIES}
     {MANAGE_PROFILE}
 
 #undef MAX_NUMBER_OF_WOSES
