--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/13_Together_Again.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/13_Together_Again.cfg
@@ -46,8 +46,37 @@ I never would have been able to escape the trees without ghosts. They had proven
             side=1
             amount=$rastabahn_gold
         [/gold]
+
+        # It's very unlikely that Ras-Tabahn has access to zombie types that Ardonna does
+        # not, but we'll check anyway--just for completeness.
+        [set_variables]
+            name=rastabahn_zombie_array
+            [split]
+                list=$rastabahn_zombies
+                key=allow_recruit
+                separator=","
+            [/split]
+        [/set_variables]
+        [foreach]
+            array=zombies
+            [do]
+                [if]
+                    [variable]
+                        name=rastabahn_zombie_array[$i].allow_recruit
+                        boolean_equals=yes
+                    [/variable]
+                    [then]
+                        [set_variable]
+                            name=this_item.allow_recruit
+                            value="yes"
+                        [/set_variable]
+                    [/then]
+                [/if]
+            [/do]
+        [/foreach]
+
         [clear_variable]
-            name=rastabahn_gold,rastabahn_recall_list
+            name=rastabahn_gold, rastabahn_recall_list, rastabahn_zombies, rastabahn_zombie_array
         [/clear_variable]
 
         # Only one Shynal will be recalled.
