--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/14_Entering_the_Northlands.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/14_Entering_the_Northlands.cfg
@@ -262,6 +262,7 @@ We reached the Ford of Abez as the dawn light spread behind the mountain peaks t
     [/event]
 
     {HERO_DEATHS}
+    {ZOMBIES}
     {MANAGE_PROFILE}
     {KIDS_ADVANCE}
 [/scenario]
