--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/21_Against_the_World.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/21_Against_the_World.cfg
@@ -875,6 +875,7 @@ We finally made it out of the mountains. We crossed the Ford of Abez late this m
     {ALLOW_LICHES}
     {TURN_INTO_A_LICH}
     {HERO_DEATHS}
+    {ZOMBIES}
     {MANAGE_PROFILE}
     {KIDS_ADVANCE}
 [/scenario]
