--- a/data/campaigns/Secrets_of_the_Ancients/units/Necromancer.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/units/Necromancer.cfg
@@ -6,6 +6,18 @@
     [/base_unit]
     hide_help=yes
     do_not_list=yes
+    [attack]
+        name=plague staff
+        description=_"plague staff"
+        icon=attacks/staff-plague.png
+        type=impact
+        range=melee
+        damage=6
+        number=3
+        [specials]
+            {WEAPON_SPECIAL_SOTA_PLAGUE}
+        [/specials]
+    [/attack]
     [extra_anim]
         # This is a copy of the recruit animation, but it doesn't need a second unit
         # in order to work, so it can be called with animate_unit.
