--- a/data/campaigns/Secrets_of_the_Ancients/utils/sota-utils.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/utils/sota-utils.cfg
@@ -34,7 +34,8 @@
     controller=human
     team_name=good
     user_team_name= _ "Ras-Tabahn"
-    # This type of Dark Sorcerer cannot advance to a lich.
+     # This type of Dark Sorcerer advances to a Necromancer with a custom plague
+    # attack, and cannot advance to a Lich.
     type=SotA Dark Sorcerer
     id=Ras-Tabahn
     name= _ "Ras-Tabahn"
@@ -43,7 +44,7 @@
         {TRAIT_STRONG}
         {TRAIT_INTELLIGENT}
     [/modifications]
-    recruit=Walking Corpse,Ghost,Skeleton,Skeleton Archer
+    recruit=SotA Walking Corpse_Dummy,Ghost,Skeleton,Skeleton Archer
     {FLAG_VARIANT undead}
 #enddef
 
@@ -52,7 +53,8 @@
     controller=human
     team_name=good
     user_team_name= _ "Ardryn-Na"
-    # This type of Dark Adept cannot eventually advance to a lich.
+    # This type of Dark Adept eventually advances to a Necromancer with a custom
+    # plague attack, and cannot advance to a Lich.
     type=SotA Dark Adept
     id=Ardonna
     profile=portraits/ardonna.png
@@ -64,7 +66,7 @@
         {TRAIT_RESILIENT}
     [/modifications]
     {FLAG_VARIANT undead}
-    recruit=Walking Corpse,Ghost,Skeleton,Skeleton Archer
+    recruit=SotA Walking Corpse_Dummy,Ghost,Skeleton,Skeleton Archer
 #enddef
 
 #define RECALL_LOYAL_UNITS
@@ -299,6 +301,18 @@
                 [/message]
             [/else]
         [/if]
+    [/event]
+
+    [event]
+        name=last_breath
+        [filter]
+            # Not actually a hero, but it fits here better than anywhere else.
+            race=bats
+        [/filter]
+        [message]
+            speaker=Ardonna
+            message= _ "Don't worry, my pet. I can save you."
+        [/message]
     [/event]
 #enddef
 
