--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/07_Meeting_of_the_Minds.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/07_Meeting_of_the_Minds.cfg
@@ -69,6 +69,24 @@ The tunnel at the back of the cave narrowed and ran on for quite some time. Patc
     [event]
         name=prestart
 
+        # Prepare to switch leaders.
+        {SAVE_ZOMBIE_LIST ardonna_zombies}
+        # Clear Ardonna's recruitable zombie list so Ras-Tabahn doesn't start with them.
+        [foreach]
+            array=zombies
+            [do]
+                [set_variable]
+                    name=this_item.allow_recruit
+                    value=no
+                [/set_variable]
+            [/do]
+        [/foreach]
+        # Ras-Tabahn does start out with human walking corpses.
+        [set_variable]
+            name=zombies[3].allow_recruit
+            value=yes
+        [/set_variable]
+
         [item]
             x,y=13,3
             image=scenery/gate-rusty-sw.png
