--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/08_Carcyn.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/08_Carcyn.cfg
@@ -464,5 +464,6 @@ After several days of travel, he approached the frontier town of Carcyn."
     [/event]
 
     {HERO_DEATHS}
+    {ZOMBIES}
     {KIDS_ADVANCE}
 [/scenario]
