--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/16_The_Mage.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/16_The_Mage.cfg
@@ -522,6 +522,7 @@ We crossed the high plateaus, and forded the Arkan-thoria. Then we headed up int
     [/event]
 
     {HERO_DEATHS}
+    {ZOMBIES}
     {MANAGE_PROFILE}
     {KIDS_ADVANCE}
 [/scenario]
