--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/18_Abandoned_Outpost.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/18_Abandoned_Outpost.cfg
@@ -522,6 +522,7 @@ Now the process is complete for both of us. I posted a guard so nothing could ha
     {ALLOW_LICHES}
     {TURN_INTO_A_LICH}
     {HERO_DEATHS}
+    {ZOMBIES}
     {MANAGE_PROFILE}
     {KIDS_ADVANCE}
 
