DiD S3: fixed misspelling in music track

--- a/data/campaigns/Descent_Into_Darkness/scenarios/03_A_Haunting_in_Winter.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/03_A_Haunting_in_Winter.cfg
@@ -12,7 +12,7 @@
 
     {SCENARIO_MUSIC       the_deep_path.ogg}
     {EXTRA_SCENARIO_MUSIC underground.ogg}
-    {EXTRA_SCENARIO_MUSIC nunc_dmittis.ogg}
+    {EXTRA_SCENARIO_MUSIC nunc_dimittis.ogg}
 
     [story]
         [part]
