SotA S21: Have elf from S12 lead the elven forces

--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/21_Against_the_World.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/21_Against_the_World.cfg
@@ -380,13 +380,13 @@ We finally made it out of the mountains. We crossed the Ford of Abez late this m
                         [/split]
                     [/set_variables]
                     [message]
-                        speaker=Galoïndrath
+                        speaker=Isthiniel
                         message= _ "What is this? The enemy lurking in wait in our forests? To arms! Let us immediately rid our land of this foulness!"
                     [/message]
                 [/then]
                 [else]
                     [message]
-                        speaker=Galoïndrath
+                        speaker=Isthiniel
                         message= _ "Never again will these monsters use the spirits of our ancestors against us. We will burn them down!"
                     [/message]
                 [/else]
@@ -695,7 +695,7 @@ We finally made it out of the mountains. We crossed the Ford of Abez late this m
         location}
 
         [move_unit_fake]
-            type=Elvish High Lord
+            type=Elvish Enchantress
             side=6
             x=58, $location.x
             y=36, $location.y
@@ -705,10 +705,10 @@ We finally made it out of the mountains. We crossed the Ford of Abez late this m
             side=6
             x=$location.x
             y=$location.y
-            type=Elvish High Lord
-            name= _ "Galoïndrath"
-            id=Galoïndrath
-            # This is so he can't be assassinated by a single, lucky Ancient Lich:
+            type=Elvish Enchantress
+            name= _ "Isthiniel"
+            id=Isthiniel
+            # This is so she can't be assassinated by a single, lucky Ancient Lich:
             [modifications]
                 {TRAIT_RESILIENT}
             [/modifications]
