--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/12_Walking_Trees.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/12_Walking_Trees.cfg
@@ -49,6 +49,10 @@ My primary objective was met, and I had been able to press a number of ghosts in
             x,y=24,2
             name=_ "Isthiniel"
             id=Isthiniel
+            # To match her appearance in S21:
+            [modifications]
+                {TRAIT_RESILIENT}
+            [/modifications]
             canrecruit=yes
             facing=sw
         [/unit]
