--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/05_Blackwater.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/05_Blackwater.cfg
@@ -324,6 +324,10 @@ When the captain retained his memories, I reasoned that it may have been because
             message= _ "Happened? Dead."
         [/message]
         [message]
+            speaker=Ardonna
+            message= {WHISPER ( _ "Keep quiet about that.")}
+        [/message]
+        [message]
             speaker=Gweddyn
             message= _ "Ha! Well, actually, you do look terrible. Very... gray, and your face is... But we’re speaking! You can’t actually be dead!"
         [/message]
