DiD S7: modified guard movement and vision

--- a/data/campaigns/Descent_Into_Darkness/scenarios/07_A_Small_Favor.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/07_A_Small_Favor.cfg
@@ -383,7 +383,6 @@
     {CLEAR_VARIABLE turn_mod}
 #enddef
 
-
     [event]
         name=prestart
 
@@ -417,10 +416,7 @@
                 description= _ "This scenario takes place entirely at night."
             [/note]
             [note]
-                description= _ "Enemy units have reduced vision"
-            [/note]
-            [note]
-                description= _ "Night Watchmen have reduced movement"
+                description= _ "Enemy units have reduced vision (radius 3)"
             [/note]
         [/objectives]
 
@@ -441,19 +437,11 @@
 
         {MODIFY_UNIT (side=1) facing nw}
 
-        {MODIFY_UNIT (type=Spearman,Bowman) max_moves 3}
         [modify_unit]
             [filter]
-                [and]
-                    side=2
-                [/and]
-                [and]
-                    [not]
-                        type=Spearman,Bowman
-                    [/not]
-                [/and]
+                side=2
             [/filter]
-            vision=3
+            vision=2
         [/modify_unit]
 
         {VARIABLE guard_alerted 0}
@@ -464,7 +452,28 @@
 
         [message]
             speaker=Darken Volk
-            message= _ "The stolen book lies within Lord Karres’s manor at the north end of the city. It will be difficulty for us to defeat the entire city guard, so we must stay hidden as long as possible. Once we are spotted, we will have to make a run for it."
+            message= _ "The stolen book lies within Lord Karres’s manor at the north end of the city. It will be difficulty for us to defeat the entire city guard, so we must stay hidden as long as possible. For now, we can use this fog to our advantage. I will cast a spell using it to obscure the vision of the town guards. It should not affect us, however."
+        [/message]
+
+        [delay]
+            time=450
+        [/delay]
+        [animate_unit]
+            [filter]
+                id=Darken Volk
+            [/filter]
+            [primary_attack]
+                range=ranged
+            [/primary_attack]
+            flag=attack
+        [/animate_unit]
+        [delay]
+            time=350
+        [/delay]
+
+        [message]
+            speaker=Darken Volk
+            message= _ "This spell will not hide us completely. If we stray too close to the guards, they will still be able to see us. Once we are spotted, we will have to make a run for it."
         [/message]
 
         [message]
