DiD S7: added dialogue

--- a/data/campaigns/Descent_Into_Darkness/scenarios/07_A_Small_Favor.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/07_A_Small_Favor.cfg
@@ -486,6 +486,26 @@
     [event]
         name=sighted
         [filter]
+            side=2
+        [/filter]
+        [filter_second]
+            side=1
+        [/filter_second]
+
+        [message]
+            speaker=unit
+            message= _ "This blasted fog is so thick! I can’t see a thing!"
+        [/message]
+        
+        [message]
+            speaker=Taylor
+            message= _ "Stay alert, soldier. Report anything unusual immediately."
+        [/message]
+    [/event]
+    
+    [event]
+        name=sighted
+        [filter]
             side=1
         [/filter]
         [filter_second]
