DiD S3: tweaked spawns

--- a/data/campaigns/Descent_Into_Darkness/scenarios/03_A_Haunting_in_Winter.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/03_A_Haunting_in_Winter.cfg
@@ -257,6 +257,7 @@
                 name=cleaver
             [/secondary_attack]
             animate=yes
+            slowed=yes
             amount=6
         [/harm_unit]
 
@@ -279,6 +280,7 @@
                 name=cleaver
             [/secondary_attack]
             animate=yes
+            slowed=yes
             amount=5
         [/harm_unit]
 
@@ -577,6 +579,7 @@
             x,y=$x1,$y1
             side=1
             animate=yes
+            passable=yes
         [/unit]
 
         {REMOVE_IMAGE $x1 $y1}
@@ -809,6 +812,7 @@
             x,y=$loc1.x,$loc1.y
             side=1
             animate=yes
+            passable=yes
             id=S3_Rebel_Soul
         [/unit]
 
@@ -920,6 +924,7 @@
             x,y=$loc2.x,$loc2.y
             side=1
             animate=yes
+            passable=yes
         [/unit]
 
         [delay]
