SotA S21: Add some missing items
Add flag for the dwarves.
Add income for Magi to match handling of Dwarves & Elves.

--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/21_Against_the_World.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/21_Against_the_World.cfg
@@ -95,6 +95,7 @@ We finally made it out of the mountains. We crossed the Ford of Abez late this m
         no_leader=yes
         hidden=yes
         income=-2  # Until they arrive.
+        {FLAG_VARIANT knalgan}
     [/side]
 
     [side]
@@ -652,7 +653,7 @@ We finally made it out of the mountains. We crossed the Ford of Abez late this m
         [/unit]
         [modify_side]
             side=5
-            income=0
+            {INCOME 5 7 10}
             hidden=no
         [/modify_side]
 
